--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
         "test:e2e": "jest --config ./apps/data-streams/test/jest-e2e.json"
     },
     "dependencies": {
+        "@nestjs/axios": "0.0.3",
         "@nestjs/common": "^7.6.15",
         "@nestjs/core": "^7.6.15",
         "@nestjs/microservices": "^7.6.15",
         "@nestjs/platform-express": "^7.6.15",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
-        "rxjs": "^6.6.6"
+        "rxjs": "^6.6.6",
+        "zod": "^3.11.6"
     },
     "devDependencies": {
         "@nestjs/cli": "^7.6.0",
