--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
         "@nestjs/axios": "0.0.3",
         "@nestjs/common": "^7.6.15",
         "@nestjs/core": "^7.6.15",
+        "@nestjs/event-emitter": "^1.0.0",
         "@nestjs/microservices": "^7.6.15",
         "@nestjs/platform-express": "^7.6.15",
+        "@nestjs/schedule": "^1.0.1",
         "amqp-connection-manager": "^3.7.0",
         "amqplib": "^0.8.0",
         "reflect-metadata": "^0.1.13",
@@ -37,6 +39,7 @@
         "@nestjs/cli": "^7.6.0",
         "@nestjs/schematics": "^7.3.0",
         "@nestjs/testing": "^7.6.15",
+        "@types/cron": "^1.7.3",
         "@types/express": "^4.17.11",
         "@types/jest": "^26.0.22",
         "@types/node": "^14.14.36",
