Add redis store

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@nestjs/schedule": "^1.0.1",
         "amqp-connection-manager": "^3.7.0",
         "amqplib": "^0.8.0",
+        "redis": "^4.0.0-rc.3",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^6.6.6",
