--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^6.6.6",
+        "uuid": "^8.3.2",
         "zod": "^3.11.6"
     },
     "devDependencies": {
@@ -45,6 +46,7 @@
         "@types/jest": "^26.0.22",
         "@types/node": "^14.14.36",
         "@types/supertest": "^2.0.10",
+        "@types/uuid": "^8.3.1",
         "@typescript-eslint/eslint-plugin": "^4.19.0",
         "@typescript-eslint/parser": "^4.19.0",
         "eslint": "^7.22.0",
